<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Main</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"/>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g example="Browser" id="name">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="help_url" translatable="false"/>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"/>
    <string name="custom_workspace_cling_description_1"/>
    <string name="custom_workspace_cling_title_2"/>
    <string name="custom_workspace_cling_description_2"/>
    <string name="widget_app_app">Apps</string>
    <string name="widget_app_filemanager">File Manager</string>
    <string name="widget_app_gallery">Gallery</string>
    <string name="widget_app_market">Market</string>
    <string name="widget_app_message">Message</string>
    <string name="widget_app_navit">Navigation</string>
    <string name="widget_app_news">News</string>
    <string name="widget_app_setting">Setting</string>
    <string name="widget_app_video">Video</string>
    <string name="widget_app_email">Email</string>
    <string name="widget_app_calc">Calc</string>
    <string name="widget_app_eq">EQ</string>
    <string name="widget_app_dtv">DTV</string>
    <string name="widget_app_aux">AUX</string>
    <string name="widget_app_maxthon">Maxthon</string>
    <string name="widget_app_driving_mode">DrivingMode</string>
    <string name="no_navi_app">No navigation map, please install the navigation program</string>
    <string name="app_bt">com.carit.bluetooth.intent.action.BluetoothApplication</string>
    <string name="app_radio">com.carit.radioplayer.intent.action.RadioPlayer</string>
    <string name="app_music">android.intent.action.MUSIC_PLAYER</string>
    <string name="app_navi_name">Navi</string>
    <string name="app_radio_name">Radio</string>
    <string name="app_allapp_name">Apps</string>
    <string name="app_bt_name">Bluetooth</string>
    <string name="app_music_name">Music</string>
    <string name="app_parking_name">Parking</string>
    <string name="widget_12_format" translatable="false">h:mm</string>
    <string name="widget_year_month_day" translatable="false">yyyy-MM-dd</string>
    <string name="widget_week_format">EEEE</string>
    <string name="widget_12_time_format" translatable="false">h:mm</string>
    <string name="widget_24_time_format" translatable="false">kk:mm</string>
    <string name="widget_12_am_pm_format" translatable="false">aa</string>
    <string name="widget_24_am_pm_format" translatable="false"/>
    <string name="abbrev_wday_month_day_no_year">yyyyEEEMMMMd</string>
    <string name="system_ui_date_pattern">@*android:string/system_ui_date_pattern</string>
    <string name="time">Time</string>
    <string name="title_settings">"Settings"</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="navi">Navi</string>
    <string name="media">Media</string>
    <string name="camera">DTV</string>
    <string name="camera360">360DVR</string>
    <string name="apps">All App</string>
    <string name="voice">Voice</string>
    <string name="video">Video</string>
    <string name="net">Network</string>
    <string name="phone_con">E-Con</string>
    <string name="sim">SIM</string>
    <string name="tmc">TMC</string>
    <string name="phone_bt">BT</string>
    <string name="atmo_lamp">Atmo Lamp</string>
    <string name="file_manager">File Manager</string>
    <string name="car">Car</string>
    <string name="system_app_cannot_delete">System app can not uninstall</string>
</resources>