<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time"
                android:textSize="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/left_line" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings"
                android:textSize="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/right_line" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/index_bg_6" />

        <TextView
            android:id="@+id/navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navi_btn"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusLeft="@+id/media"
            android:nextFocusRight="@+id/media"
            android:paddingTop="40dp"
            android:text="NAVI"
            android:layout_marginTop="210dp"
            android:textSize="20dp" 
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="200dp"
            android:focusable="true"
            android:background="@drawable/media_btn"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:nextFocusLeft="@+id/navi"
            android:nextFocusRight="@+id/navi"
            android:paddingTop="30dp"
            android:text="MEDIA"
            android:textSize="20dp" />
        
        <TextView
            android:id="@+id/phone_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yilian_btn"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusLeft="@+id/media"
            android:nextFocusRight="@+id/media"
            android:paddingTop="10dp"
            android:text="@string/phone_con"
            android:layout_marginTop="190dp"
            android:layout_marginRight="110dp"
            android:textSize="20dp" 
            android:layout_gravity="right"
            />
        
        <TextView
            android:id="@+id/net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/net_btn"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusLeft="@+id/media"
            android:nextFocusRight="@+id/media"
            android:paddingTop="50dp"
            android:text="@string/net"
            android:layout_marginTop="22dp"
            android:layout_marginRight="110dp"
            android:textSize="20dp" 
            android:layout_gravity="right"
            
            />

        <TextView
            android:id="@+id/voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/voice_btn"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusLeft="@+id/media"
            android:nextFocusRight="@+id/media"
            android:paddingTop="20dp"
            android:text="@string/voice"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="170dp"
            android:textSize="20dp" 
            android:layout_gravity="center_horizontal"
            
            />
        <TextView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/camera"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusLeft="@+id/media"
            android:nextFocusRight="@+id/media"
            android:paddingTop="20dp"
            android:text="@string/camera"
            android:layout_marginTop="10dp"
            android:layout_marginRight="170dp"
            android:textSize="20dp" 
            android:layout_gravity="center_horizontal"
            
            />
        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_btn"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusLeft="@+id/media"
            android:nextFocusRight="@+id/media"
            android:paddingTop="30dp"
            android:text="@string/settings"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="110dp"
            android:textSize="20dp" 
            android:layout_gravity="left"
            />
        
        <TextView
            android:id="@+id/apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apps_btn"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusLeft="@+id/media"
            android:nextFocusRight="@+id/media"
            android:paddingTop="10dp"
            android:text="@string/apps"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="110dp"
            android:textSize="20dp" 
            android:layout_gravity="left"
            />
        <TextView
            android:id="@+id/camera360"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="170dp"
            android:layout_marginTop="200dp"
            android:focusable="true"
            android:background="@drawable/camera360"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:nextFocusLeft="@+id/navi"
            android:nextFocusRight="@+id/navi"
            android:paddingTop="30dp"
            android:text="@string/camera360"
            android:textSize="20dp"
            
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bottom_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <ImageView
                    android:id="@+id/mute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/mute_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_text_bg"
                    android:gravity="center"
                    android:text="TMC"
                    android:textSize="20dp" />

                <com.carit.util.Clock
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="35dp" />

                <ImageView
                    android:id="@+id/bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/mute_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_text_bg"
                    android:gravity="center"
                    android:text="SIM"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/yilian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/yilian_btn" />

        <ImageButton
            android:id="@+id/reversing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/revers_btn" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/settings_btn" />

        <ImageButton
            android:id="@+id/apps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/apps_btn" />
    </LinearLayout>

</LinearLayout>